# google-ads-python

./: .gitignore  =19  CODEOWNERS  CONTRIBUTING.md  ChangeLog  Dockerfile  Gemfile  README.rst  __init__.py  google-ads.yaml  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  usage_question.md
examples/Migration/: CreateCompleteCampaignAdWordsApiOnly.py  CreateCompleteCampaignBothApisPhase1.py  CreateCompleteCampaignBothApisPhase2.py  CreateCompleteCampaignBothApisPhase3.py  CreateCompleteCampaignBothApisPhase4.py  CreateCompleteCampaignGoogleAdsApiOnly.py
examples/account_management/: __init__.py  approve_merchant_center_link.py  create_customer.py  get_accessible_customers.py  get_account_changes.py  get_account_hierarchy.py  get_account_information.py  get_change_details.py  get_change_summary.py  get_pending_invitations.py  invite_user_with_access_role.py  link_manager_to_client.py  list_accessible_customers.py  reject_merchant_center_link.py  update_user_access.py  verify_advertiser_identity.py
examples/advanced_operations/: __init__.py  add_ad_customizer.py  add_ad_group_asset.py  add_ad_group_bid_modifier.py  add_ad_group_bid_modifiers.py  add_app_campaign.py  add_bidding_data_exclusion.py  add_bidding_seasonality_adjustment.py  add_call_ad.py  add_demand_gen_campaign.py  add_display_upload_ad.py  add_dynamic_page_feed.py  add_dynamic_page_feed_asset.py  add_dynamic_search_ads.py  add_dynamic_search_ads_campaign.py  add_expanded_text_ad_with_upgraded_urls.py  add_gmail_ad.py  add_local_campaign.py  add_performance_max_campaign.py  add_responsive_search_ad_full.py  add_responsive_search_ad_with_ad_customizer.py  add_sitelink.py  add_smart_campaign.py  add_smart_display_ad.py  create_and_attach_shared_keyword_set.py  create_sitelink.py  find_and_remove_criteria_from_shared_set.py  get_ad_group_bid_modifiers.py  upload_video.py  use_cross_account_bidding_strategy.py  use_portfolio_bidding_strategy.py
examples/assets/: add_call.py  add_hotel_callout.py  add_lead_form_asset.py  add_prices.py  add_sitelinks.py  upload_image_asset.py
examples/asyncio/: async_add_campaigns.py  async_search.py  async_search_stream.py
examples/audience_insights/: generate_audience_insights.py  generate_audience_insights_test.py
examples/authentication/: __init__.py  authenticate_in_desktop_application.py  authenticate_in_standalone_application.py  authenticate_in_web_application.py  generate_user_credentials.py  test_generate_user_credentials.py
examples/basic_operations/: __init__.py  add_ad_groups.py  add_campaigns.py  add_expanded_text_ads.py  (+22 more)
tests/: client_test.py  config_test.py  oauth2_test.py  util_test.py
(+28159 files in other folders)
