# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-ads"
version = "28.2.0"
description = "Client library for the Google Ads API"
readme = "./README.rst"
requires-python = ">=3.9, <3.15"
license = { file = "LICENSE" }
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-auth-oauthlib >= 1.0.0, < 2.0.0",
    "google-api-core >= 2.13.0, <= 3.0.0",
    "google-api-core >= 2.22.0, <= 3.0.0; python_version >= '3.13'",
    "googleapis-common-protos >= 1.56.3, < 2.0.0",
    "googleapis-common-protos >= 1.63.2, < 2.0.0; python_version >= '3.13'",
    # NOTE: Source code for grpcio and grpcio-status exist in the same
    # grpc/grpc monorepo and thus these two dependencies should always
    # have the same version range.
    "grpcio >= 1.59.0, < 2.0.0",
    "grpcio >= 1.66.2, < 2.0.0; python_version >= '3.13'",
    "grpcio >= 1.75.1, < 2.0.0; python_version >= '3.14'",
    "grpcio-status >= 1.59.0, < 2.0.0",
    "grpcio-status >= 1.66.2, < 2.0.0; python_version >= '3.13'",
    "grpcio-status >= 1.75.1, < 2.0.0; python_version >= '3.14'",
    "proto-plus >= 1.22.3, < 2.0.0",
    "proto-plus >= 1.25.0, < 2.0.0; python_version >= '3.13'",
    "PyYAML >= 5.1, < 7.0",
    "protobuf >= 4.25.0, < 7.0.0",
    "protobuf >= 5.26.1, < 7.0.0; python_version >= '3.13'",
]

[project.optional-dependencies]
tests = ["nox >= 2025.02.09"]

[project.urls]
Repository = "https://github.com/googleads/google-ads-python"

[tool.setuptools.packages.find]
include=["google.ads.*", "examples.*"]
exclude=["tests", "tests.*"]